ci: add build of NUCLEO_L476RG
B_U585I_IOT02A could be enabled when STM32 core version
2.1.0  will be released.

Signed-off-by: Frederic Pillon <frederic.pillon@st.com>

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -11,6 +11,8 @@ jobs:
       matrix:
         fqbn:
           - STMicroelectronics:stm32:Disco:pnum=B_L4S5I_IOT01A
+          - STMicroelectronics:stm32:Nucleo_64:pnum=NUCLEO_L476RG
+          # - STMicroelectronics:stm32:Disco:pnum=B_U585I_IOT02A
 
     steps:
       - uses: actions/checkout@v2
