--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=STM32duino LPS22HH
-version=2.0.3
+version=2.0.4
 author=SRA
 maintainer=stm32duino
 sentence=Nano pressure sensor.
 paragraph=This library provides Arduino support for the nano pressure sensor LPS22HH for STM32 boards.
 category=Sensors
 url=https://github.com/stm32duino/LPS22HH
-architectures=stm32, avr, sam
+architectures=*
